# BizRadar

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  README_EN.md  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/: server.py
config/: settings.py
core/: event_bus.py  llm.py  logging_config.py  notifier.py  orchestrator.py  scheduler.py
core/agents/: __init__.py  competitor_research.py  critic_agent.py  extractor_agent.py  idea_aggregator.py  planner_agent.py  pm_agent.py  techlead_agent.py
core/memory/: __init__.py  sqlite_manager.py
data/: ideahunter.db-shm  ideahunter.db-wal
docs/: community_promo.md
plans/: api.md  changelog_v0_2_0.md  design.md  github_growth_roadmap.md  ideahunter_todo.md  intro.md  rfc.md
plugins/: __init__.py  appstore_scraper.py  base_scraper.py  feed_utils.py  hackernews_scraper.py  indiehackers_scraper.py  kr36_scraper.py  producthunt_scraper.py  reddit_scraper.py  registry.py  sspai_scraper.py  twitter_scraper.py  v2ex_scraper.py  weibo_scraper.py  xhs_scraper.py  zhihu_scraper.py
tests/: test_api.py  test_critic_agent.py  test_e2e_integration.py  test_llm.py  test_orchestrator.py  test_planner_agent.py  test_pm_agent.py  test_sqlite_manager.py  test_v2ex_scraper.py
web/: index.html
workflows/: ci.yml
